# skwdro

./: .coveragerc  .gitattributes  .gitignore  .readthedocs.yaml  .travis.yml  CITATION.bib  CODE_OF_CONDUCT.md  Makefile  README.md  README.rst  appveyor.yml  environment.yml  losses.npy  main.py  pyproject.toml  requirements.txt  setup.py  test_post.npy  test_pre.npy  tox.ini
.github/workflows/: doc.yml  setup.yml  style.yml  test.yml
.pycodestyle/: tox_501.ini  tox_all.ini
API/: modules.rst  skwdro.neural_network.rst  skwdro.rst
doc/: Makefile  api.rst  conf.py  custom.rst  distributions.rst  index.rst  losses.rst  models.rst  optim.rst  pytorch.rst  quick_start.rst  requirements.txt  sg_execution_times.rst  sklearn.rst  solvers.rst  tuning.rst  user_guide.rst  wdro.rst  why_skwdro.rst  wilds.rst
doc/API/: modules.rst  skwdro.distributions.rst  skwdro.linear_models.rst  skwdro.neural_network.rst  skwdro.operations_research.rst  skwdro.rst  skwdro.solvers.rst  skwdro.tests.rst  skwdro.wrap_problem.rst  submodules.rst
doc/Builtin/: index.rst  portfolio.ipynb  portfolio.py.md5  portfolio.rst  portfolio_codeobj.pickle  searchindex  sg_execution_times.rst
doc/Custom/: index.rst  searchindex  sg_execution_times.rst  shallow_network.ipynb  shallow_network.py  shallow_network.py.md5  shallow_network.rst  shallow_network_codeobj.pickle
doc/_static/: mermaid-fix.js
doc/_static/css/: custom.css
doc/api_deepdive/: cost_decoding.rst  costs.rst  losses.rst  robustification.rst  samplers.rst  submodules.rst
doc/examples/Study/: compare_with_pdro.codeobj.json  compare_with_pdro.ipynb  compare_with_pdro.py  compare_with_pdro.py.md5  (+1 more)
doc/tutos/: costs.rst  samplers.rst
examples/: LinearRegression.py  NewsVendor.py  README.rst  ShallowNet.py  ShallowNet_visu.py  Weber.py  _plot_display.py  approx_dro.py  biased_approx_dro.py  curves_logreg.py  easy_shallownet.py  langevin_approx_dro.py  langevin_approx_dro_alt.py  linear_reg.py  logistic_reg.py  logistic_reg_stat_plots.py  my_logistic_reg.py  my_logistic_reg2.py  my_logistic_reg3.py  my_logistic_reg_shared.py  plot_classifier.py  plot_computations.py  plot_display.py  plot_linear_reg.py  plot_portfolio.py  plot_portfolio_computations.py  plot_portfolio_display.py  plot_shallowNet_1D_GDvsRobust.py  plot_template.py  plot_transformer.py  portfolio.py  portfolio_module.py  portfolio_module_with_model_selection.py  roadefscreen.py  weber.py  weber_baseline.py  weber_epsilon.py
examples/CustomWDROEstimators/: custom_regression.py  my_WDRO_regressor.py
examples/TODO/: ShallowNet_visu.py  linear_reg.py  logistic_reg.py  my_WDRO_regressor.py  plot_computations.py  plot_display.py  portfolio_module_with_model_selection.py  shallow_network.py  weber.py  weber_epsilon.py
examples/_not_working/: _plot_portfolio.py
examples/_templates/: _plot_transformer.py
examples/builtin_models/: README.md  README.rst  linear_regression.py  logistic_regression.py  portfolio.py  spatial_perturbation_logistic_regression.py  spatial_perturbation_moons.py
examples/custom_models/: README.md  README.rst  classifiers_comparison.py  neural_net.py  polynomial_regression.py  regressors_comparison.py  shallow_network.py  shallownet.py
examples/reliability/: Makefile  analysis.py  analysis_hists.py  analysis_portfolio.py  hists.py  launch.sh  launch_logreg.py  launch_portfolio.py  main.py  params.toml  skwdro.def  skwdro_hists.def
examples/robustness_illustration/: classification_basics.py  illustration_common.py  regression_basics.py
examples/stored_data/: parallel_portfolio_curve_data.npy  parallel_portfolio_histogram_SAA_data.npy  parallel_portfolio_histogram_WDRO_data.npy  portfolio_curve_data.npy  portfolio_curves_data.npy  portfolio_histogram_SAA_data.npy  portfolio_histogram_WDRO_data.npy  portfolio_histogram_data.npy
examples/studying_skwdro/: README.rst  __epsilon_convergence_to_wdro.py  compare_with_pdro.py  plot_lambda_landscape.py  spatial_perturbation_logistic_regression_epsilon_study.py
examples/test_mnist/: __init__.py  model.py  plot.py  test_classif.py  test_mnist.py  test_wdro.py
recipes/: mechanic.yaml  prodigy.yaml  recipe.yaml
skltemplate/: _template.py
skltemplate/tests/: test_common.py  test_template.py
skwdro/: __init__.py  estimators.py  torch.py  wrap_problem.py
skwdro/base/: cost_decoder.py  costs.py  costs_torch.py  loss_shallownet.py  losses.py  losses_torch.py  losses_torch_portfolio.py  problems.py  rho_tuner.py  rho_tuners.py  rho_tuners_computations.py
skwdro/distributions/: __init__.py  dirac_distribution.py
skwdro/linear_models/: __init__.py  _linear_regression.py  _logistic_regression.py  _shallow_net.py
skwdro/neural_network/: __init__.py  _loss_shallownet.py  _shallow_net.py
skwdro/operations_research/: __init__.py  _newsvendor.py  _portfolio.py  _portfolio.py.orig  _weber.py
skwdro/solvers/: __entropic_dual_torch_epsilon.py  __init__.py  entropic_dual_solvers.py  entropic_dual_torch.py  entropic_dual_torch_epsilon.py  gradient_estimates.py  hybrid_opt.py  hybrid_sgd.py  optim_cond.py  oracle_torch.py  result.py  specific_solvers.py  utils.py
skwdro/tests/: test_common.py
skwdro/utils/: classifier_comparison.py
tests/: dirac_test.py
tests/misc/: launchall.sh  test_auto_convergence.py  test_consistency.py  test_cost_parser_grammar.py  test_distrib_helper_classes.py
tests/numpy_tests/: test_auto_convergence.py  test_binary_separable_log_classif.py  test_binary_separable_log_classif_cvx.py  test_portfolio_basic_cvx.py  test_portfolio_cvx.py
tests/pytorch_tests/: test_hybrid_cvxopt.py  test_hybrid_sgd.py
tests/test_interfaces/: test_classif_protection.py  test_guards.py
tests/torch_tests/: test_auto_convergence.py  test_binary_separable_log_classif.py  test_binary_separable_log_classif_cvx.py  test_costs.py  test_hybrid_cvxopt.py  test_hybrid_sgd.py  test_logistic_regression.py  test_losses_formats.py  test_optim_cond.py  test_overfitting_separable.py  test_portfolio_basic_cvx.py  test_preimplemented_losses.py  test_regularized_linear_exact.py  test_sampler.py  utils.py
(+59 files in other folders)
