[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skwdro"
dynamic = ["version"]
description = "A Robust ML toolbox"
readme = "README.md"
maintainers = [
    { name = "F. Iutzeler", email = "franck.iutzeler@gmail.com" },
]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
]

dependencies = [
    "numpy",
    "pandas",
    "scikit-learn>=1.4",
    "scipy",
    "cvxopt",
    "cvxpy",
    "torch",
    "sqwash",
    "dask[distributed]",
    "prodigyopt",
    "mechanic-pytorch"
]

[project.optional-dependencies]
examples = [
    "matplotlib",
    "tqdm",
    "seaborn",
    "joblib",
]
docs = [
    "numpydoc",
    "sphinx",
    "sphinx-gallery",
    "sphinx_rtd_theme",
]
test = [
    "pytest",
    "pytest-cov",
]
monitor = [
    "wandb",
]

[project.urls]
Download = "https://github.com/iutzeler/skwdro"

[tool.hatch.version]
path = "skwdro/_version.py"

[tool.hatch.build.targets.sdist]
include = [
    "/skwdro",
]

[tool.hatch.envs.default]
python = "3.11"

[tool.hatch.envs.env-test]
features = ["test"]

[tool.hatch.envs.env-test.scripts]
test-custom = "pytest -v ./tests/torch_tests -W ignore::FutureWarning"
test-sklearn = "pytest -v ./skwdro/tests -W ignore::FutureWarning"
test-misc = "sh ./tests/misc/launchall.sh -W ignore::FutureWarning"
ruff-test = "ruff check -q ./skwdro"
#ruff-test = "[ -z \"$(ruff check -q ./skwdro)\" ]"
pycodestyle-test = "pycodestyle --exclude=skwdro/solvers/specific_solvers.py,skwdro/base/rho_tuners.py,skwdro/base/rho_tuners_computations.py --ignore=E501 skwdro/"

[tool.hatch.envs.env-examples]
pre-install-commands = [
  "pip3 install --editable ../skwdro"
]
features = ["examples"]

[tool.hatch.envs.env-docs]
# Could add a hook to build the doc here...
features = ["docs"]

[tool.hatch.envs.env-dev]
pre-install-commands = [
  "pip3 install --editable ../skwdro"
]
features = [
    "test",
    "examples",
    "docs",
    "monitor"
]
[tool.hatch.envs.env-dev.scripts]
test = "pytest -s -vv . "

[tool.hatch.envs.static]
dev-mode = false

[tool.hatch.metadata]
allow-direct-references = true


[tool.ruff]
extend-exclude=["*tune*", "*specific*"]
