[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skwdro"
dynamic = ["version"]
description = "A Robust ML toolbox"
readme = "README.md"
maintainers = [
    { name = "F. Iutzeler", email = "franck.iutzeler@gmail.com" },
]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
]

dependencies = [
    "numpy",
    "pandas",
    "scikit-learn>=1.4",
    "scipy",
    "cvxopt",
    "cvxpy",
    "torch",
    "sqwash",
    "dask[distributed]",
    "prodigyopt",
    "mechanic-pytorch"
]

[project.optional-dependencies]
examples = [
    "matplotlib",
    "tqdm",
    "seaborn",
    "joblib",
	"torchvision"
]
docs = [
    "numpydoc",
    "sphinx",
    "sphinx-gallery",
    "sphinx_rtd_theme",
    "sphinx-copybutton",
    "sphinx_design",
    "myst_parser",
    "furo"
]
test = [
    "pytest",
    "pytest-cov",
	"ruff",
	"pycodestyle",
	"mypy",
	"pytest-rerunfailures"
]
monitor = [
    "wandb",
]

[project.urls]
Download = "https://github.com/iutzeler/skwdro"

[tool.hatch.version]
path = "skwdro/_version.py"

[tool.hatch.build.targets.sdist]
include = [
    "/skwdro",
]

[tool.hatch.envs.default]
python = "3.11"

[tool.hatch.envs.env-test]
features = ["test"]

[tool.hatch.envs.env-test.scripts]
test-custom = "pytest -v ./tests/torch_tests/!(test_regularized_linear_exact.py) -W ignore::FutureWarning"
test-sklearn = "pytest -v ./skwdro/tests -W ignore::FutureWarning"
test-misc = "sh ./tests/misc/launchall.sh"
ruff-test = "ruff check -q ./skwdro"
pycodestyle-test = "pycodestyle --config=.pycodestyle/tox_all.ini skwdro/"
pycodestyle-length-test = "pycodestyle --config=.pycodestyle/tox_501.ini skwdro/"
mypy-test = "mypy skwdro/"

[tool.hatch.envs.env-examples]
pre-install-commands = [
  "pip3 install --editable ../skwdro"
]
features = ["examples"]

[tool.hatch.envs.env-docs]
features = ["docs", "examples", "test"]

[tool.hatch.envs.env-docs.scripts]
doc-test = "cd ./doc && make html"

[tool.hatch.envs.env-dev]
pre-install-commands = [
  "pip3 install --editable ../skwdro"
]
features = [
    "test",
    "examples",
    "docs",
    "monitor"
]
[tool.hatch.envs.env-dev.scripts]
test = "pytest -s -vv . "

[tool.hatch.envs.static]
dev-mode = false

[tool.hatch.metadata]
allow-direct-references = true


[tool.ruff]
extend-exclude=["*tune*", "*specific*"]

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
exclude = [
    '^.*_epsilon\.py$',
    '^.*rho.*\.py$',
]
ignore_missing_imports = true
